clusters/main/kubernetes/apps/custom-app-postgres/app/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-cloudnative-pg-custom-app
  namespace: custom-app
spec:
  podSelector:
    matchExpressions:
      - key: cnpg.io/cluster
        operator: In
        values:
          - custom-app-postgres
          - custom-app-postgres-restore-drill
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudnative-pg
      ports:
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 5432
